docs: record java 25 warning triage blocker